/* $Id: ChangeLog 331 2005-10-29 20:41:03Z knut.osmundsen@oracle.com $ */

2005-10-29: bird
    - kBuild/bin/amd64.linux/kDepPre, src/kDepPre/kDepPre.c:
        o Strip drive letters on non-PC OSes.

2005-10-28: bird
    - kBuild/footer.h:
        o Fixed a couple of defaults so it all works right on amd64.
    - kBuild/bin/amd64.linux/:
        o Added binaries. ash is 32-bit!

2005-10-14: bird
    - src/kDepPre/kDepPre.c, kBuild/bin/x86.win32/kDepPre.exe:
        o Corrected bug in line skipping where two lines would be skipped.
        o Corrected slashes on win32.

2005-10-03: bird
    - src/kDepPre/kDepPre.c, kBuild/bin/x86.win32/kDepPre.exe:
        o Fixed stupid stupid bug in the win32 case correcting code.
          Rebuilt the win32 binary.

2005-08-11: bird
    - kBuild/footer.kmk:
        o Enh. the _OBJECT_BASE hack for stripping of source paths within the project.

    - kBuild/tools/VCC70.kmk:
        o Use $(tolower ) to construct the right .pdb names for cleanup.

    - src/gmake/read.c:
        o print target name 'target pattern' errors.

    - kBuild/header.kmk:
        o Use $(abspath ).

    - src/gmake/variable.c:
        o Added KMK_FEATURES which indicates what's present+working and what's not.

    - src/gmake/w32/pathstuff.c, src/kDepPre/kDepPre.c, src/kDepPre/Makefile.kmk:
        o Fixed casing paths on win32.

    - src/gmake/function.c, src/gmake/Makefile.kmk:
        o Fixed $(abspath ) on Win32 and OS/2.
        o Added $(tolower ) and $(toupper ).

2005-06-16: bird
    - ALL:
        o Bootstrap and ported to FreeBSD 5.x on AMD64.

2005-05-06: bird
    - ALL:
        o Working on the build system of the build system. :-)
        o Ported the kmkbuiltin stuff to OS/2 as a prep to the win32 effort.

[missing a lot!]

2002-10-15: bird
    - ALL:
        o Created a somewhat rought directory structure.

    - src/fastdep:
        o Imported current sources from ODIN32.

    - src/kmk: